modules/gdscript/tests/scripts/analyzer/errors/enum_string_value.gd
enum Size {
	# Error here. Enum values must be integers.
	S = "hello",
}

func test():
	pass
